# eruditour

backend/: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  utils.py
backend/migration/: migration.sql
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/learning-plan/: route.ts
web/src/app/api/login/: route.ts
web/src/app/api/register/: route.ts
web/src/app/dashboard/: dashboard.tsx  page.tsx
web/src/app/login/: login.tsx  page.tsx
web/src/app/register/: page.tsx  register.tsx
web/src/components/: footer.tsx  header.tsx  hero.tsx  progressCharts.tsx  withAuth.tsx
web/src/components/modals/: createplan.tsx
web/src/types/: index.ts  plan.ts
